# learnSlam

./: .gitignore  README.md  newFile.txt
NeuralNetwork/: my_first_NeuralNetwork.ipynb
VO_Direct/: CMakeLists.txt
VO_Direct/config/: default.yaml
VO_Direct/src/: g2o_type.cpp
VO_Direct/test/: test1.cpp
VO_feature/: CMakeLists.txt
VO_feature/config/: default.yaml
VO_feature/src/: camera.cpp  frame.cpp  g2o_type.cpp  mappoint.cpp  vo.cpp
VO_feature/test/: CMakeLists.txt  test1.cpp
VO_feature_ceres/: CMakeLists.txt
VO_feature_ceres/config/: default.yaml
VO_feature_ceres/src/: ceres_bundle.cpp  frame.cpp  vo.cpp
VO_feature_ceres/test/: test1.cpp
VO_feature_pos_only_ceres/config/: default.yaml
VO_feature_pos_only_ceres/src/: CMakeLists.txt  camera.cpp  ceres_bundle.cpp  frame.cpp  g2o_type.cpp  mappoint.cpp  vo.cpp
VO_feature_pos_only_ceres/test/: test1.cpp
VO_feature_pose_autodiff /: camera.yml
VO_feature_pose_autodiff /config/: default.yaml
VO_feature_pose_autodiff /src/: g2o_type.cpp  map.cpp  vo.cpp
VO_feature_pose_only_autodiff/config/: default.yaml
VO_feature_pose_only_autodiff/src/: CMakeLists.txt  g2o_type.cpp  vo.cpp
VO_feature_pose_only_autodiff/test/: test1.cpp
camera_calibration/: camera.yml  run_cal.sh
ceres/: .main.cpp.kate-swp  CMakeLists.txt  main.cpp
ceres_Rosenbrock/: CMakeLists.txt  main.cpp
g2o/: CMakeLists.txt  main.cpp
g2o_rosenbrock/: CMakeLists.txt  main.cpp
resize/: CMakeLists.txt  CMakeLists.txt~  list_of_pictures.txt  main.cpp  run.sh
video2imgs/: CMakeLists.txt  main.cpp  run.sh
(+36 files in other folders)
